<resources>
        <string name="app_name">슥삭</string>
        <string name="out_activity_contents">동아리, 서포터즈, 봉사활동 등\n본인이 했던 대외활동에 대한 구체적인 내용을 작성해보세요!</string>
<string name="login_dialog_contents">
        소셜로그인으로\n
        <b>간편하게 슥삭 시작</b>
        하기
    </string>
<string name="sign_up_profile_service">

        <u>서비스 이용약관</u>
        및
    </string>
<string name="sign_up_profile_private_info">

        <u>개인정보 취급 방침</u>
        에 동의합니다.
    </string>
<string name="delete_withdrawal_contents">
        회원탈퇴시\n
        <b>\'슥삭\'</b>
        의 맞춤 정보 제공 서비스를\n제공 받을 수 없습니다.\n\n그래도 탈퇴하시겠어요?
    </string>
        <string name="my_page_major_grade_format">%s %s학년</string>
    <string name="club_registration">동아리 등록</string>
    <string name="club_registration_category">동아리\n소속을 선택해주세요!</string>
    <string name="club_category_campus">🏫 교내 동아리</string>
    <string name="club_category_union">🎓 연합 동아리</string>
    <string name="review_main_title">대학생활 후기</string>
    <string name="review_main_ment">📝 활동후기 보러가기</string>
    <string name="review_main_club">🕺 동아리 후기</string>
    <string name="review_main_act">💃 대외활동 후기</string>
    <string name="review_main_intern">👩‍💻 인턴 후기</string>
    <string name="main_block_title">학교 정보 확인 중!</string>
    <string name="main_block_description">조금만 기다려 주세요.(최대 7일 소요)</string>
    <string name="main_block_refresh">새로고침</string>
    <string name="main_block_not_recognize">기다려도 승인이 되지 않나요?</string>
    <string name="main_block_send_mail"><u>📮 슥삭팀에게 메일 보내기</u></string>
</resources>