<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_puzzle"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black_1"
                android:letterSpacing="-0.01"
                android:gravity="center_horizontal"
                android:text="@string/main_block_title"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:layout_marginTop="16dp" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/grey_1"
                android:letterSpacing="-0.02"
                android:gravity="center_horizontal"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:text="@string/main_block_description"
                android:layout_marginTop="4dp"/>
        <androidx.cardview.widget.CardView
                android:id="@+id/act_main_block_cv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/ssgsag"
                app:cardElevation="0dp"
                android:layout_marginTop="28dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:letterSpacing="-0.01"
                    android:gravity="center_horizontal"
                    android:text="@string/main_block_refresh"
                    android:fontFamily="@font/noto_sans_kr_bold"
                    android:layout_marginTop="12dp"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginBottom="16dp"/>
        </androidx.cardview.widget.CardView>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/grey_1"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="10sp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:text="@string/main_block_not_recognize"
                android:layout_marginTop="36dp"
                />
        <TextView
                android:id="@+id/act_main_block_tv_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black_1"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="10sp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:text="@string/main_block_send_mail"
                android:layout_marginTop="6dp"
                />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>