<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="vm"
                type="com.icoo.ssgsag_android.ui.main.review.club.registration.ClubRgstrViewModel" />
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">
        <ImageView
                android:id="@+id/frag_club_category_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cancel_grey"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#444444"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:textSize="16sp"
                android:text="@string/club_registration"
                android:lineHeight="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:textSize="18sp"
            android:textColor="#333333"
            android:text="@string/club_registration_category"
            android:layout_marginTop="28dp" />
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="85dp">
        <LinearLayout
                android:id="@+id/act_club_manager_check_ll_campus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/bt_box_white"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:textSize="18sp"
                    android:textColor="#333333"
                    android:text="@string/club_category_campus"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp">
    <LinearLayout
            android:id="@+id/act_club_manager_check_ll_union"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bt_box_white"
            android:orientation="horizontal"
            android:elevation="4dp"
            android:gravity="center_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:textSize="18sp"
                android:textColor="#333333"
                android:text="@string/club_category_union"
                android:layout_marginStart="20dp"
                android:layout_weight="1"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
</layout>