<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="vm"
                type="com.icoo.ssgsag_android.ui.main.review.main.ReviewMainViewModel" />
    </data>
    <FrameLayout
            android:id="@+id/act_review_main_fl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/act_review_main_event_cl_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingHorizontal="12dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                            android:id="@+id/act_review_main_event_iv_cancel"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/cancel_grey"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="후기 작성 이벤트"
                            android:textSize="16sp"
                            android:textColor="@color/black_2"
                            android:fontFamily="@font/noto_sans_kr_bold"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                        android:id="@+id/act_review_main_event_tv_ment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="85dp"
                        android:fontFamily="@font/noto_sans_kr_bold"
                        android:text="@string/review_main_ment"
                        android:textColor="@color/black_1"
                        android:textSize="20sp"
                        android:visibility="visible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/act_review_main_event_cl_toolbar"/>

                <LinearLayout
                        android:id="@+id/act_review_main_ll_btns"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="40dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/act_review_main_event_tv_ment">
                    <RelativeLayout
                            android:id="@+id/act_review_main_rl_club"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginHorizontal="20dp"
                            android:background="@drawable/border_eeeeee_8">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black_1"
                                android:text="@string/review_main_club"
                                android:textSize="16sp"
                                android:fontFamily="@font/noto_sans_kr_medium"
                                android:layout_centerInParent="true"
                                />
                    </RelativeLayout>
                    <RelativeLayout
                            android:id="@+id/act_review_main_rl_act"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/border_eeeeee_8">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black_1"
                                android:text="@string/review_main_act"
                                android:textSize="16sp"
                                android:fontFamily="@font/noto_sans_kr_medium"
                                android:layout_centerInParent="true"
                                />
                    </RelativeLayout>
                    <RelativeLayout
                            android:id="@+id/act_review_main_rl_intern"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/border_eeeeee_8">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black_1"
                                android:text="@string/review_main_intern"
                                android:textSize="16sp"
                                android:fontFamily="@font/noto_sans_kr_medium"
                                android:layout_centerInParent="true"
                                />
                    </RelativeLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>
    </FrameLayout>
</layout>